# password-manager

./: .claudeignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  installer.iss  vcpkg.json
resources/: app.qrc  app.rc  fonts.qrc
src/: main.cpp
src/app/: Clipboard.cpp  Clipboard.h  CopyButton.cpp  CopyButton.h  EntryDetailView.cpp  EntryDetailView.h  EntryEditorDialog.cpp  EntryEditorDialog.h  FieldRow.cpp  FieldRow.h  GeneratorPage.cpp  GeneratorPage.h  MainWindow.cpp  MainWindow.h  NavRail.cpp  NavRail.h  SettingsPage.cpp  SettingsPage.h  Theme.h  TotpRow.cpp  TotpRow.h  UnlockView.cpp  UnlockView.h  VaultPage.cpp  VaultPage.h
src/core/crypto/: Crypto.cpp  Crypto.h  SecureBuffer.cpp  SecureBuffer.h  Totp.cpp  Totp.h
src/core/model/: Attachment.h  Entry.cpp  Entry.h  Folder.h  Tag.h
src/core/storage/: AttachmentRepository.cpp  AttachmentRepository.h  Database.cpp  Database.h  EntryRepository.cpp  EntryRepository.h  FolderRepository.cpp  FolderRepository.h  Migrations.cpp  Migrations.h  SettingsRepository.cpp  SettingsRepository.h  TagRepository.cpp  TagRepository.h
src/core/storage/detail/: SqliteUtil.h
tests/: attachment_repository_tests.cpp  backup_tests.cpp  crypto_tests.cpp  entry_repository_tests.cpp  folder_repository_tests.cpp  migrations_tests.cpp  security_tests.cpp  settings_repository_tests.cpp  storage_tests.cpp  tag_repository_tests.cpp  totp_tests.cpp  vault_tests.cpp
